grammar/PythonMelodyParser.py
# Generated from PythonMelody.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class PythonMelodyParser ( Parser ):

    grammarFileName = "PythonMelody.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'def'", "'if'", "'else'", 
                     "'elif'", "'while'", "'for'", "'in'", "'print'", "'import'", 
                     "'from'", "'as'", "'return'", "'pass'", "'true'", "'false'", 
                     "'none'", "'and'", "'or'", "'not'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'='", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'+='", "'-='", "'*='", "'/='", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "':'", "','", "'.'", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "NEWLINE", "INDENT", "DEDENT", "WS", 
                      "COMMENT", "DEF", "IF", "ELSE", "ELIF", "WHILE", "FOR", 
                      "IN", "PRINT", "IMPORT", "FROM", "AS", "RETURN", "PASS", 
                      "TRUE", "FALSE", "NONE", "AND", "OR", "NOT", "PLUS", 
                      "MINUS", "STAR", "SLASH", "PERCENT", "EQ", "EQEQ", 
                      "NEQ", "LT", "GT", "LE", "GE", "PLUSEQ", "MINUSEQ", 
                      "STAREQ", "SLASHEQ", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "LBRACE", "RBRACE", "COLON", "COMMA", "DOT", 
                      "SEMICOLON", "ID", "NUM", "STRING" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_simple_stmt = 2
    RULE_compound_stmt = 3
    RULE_func_def = 4
    RULE_if_stmt = 5
    RULE_while_stmt = 6
    RULE_for_stmt = 7
    RULE_block = 8
    RULE_assign_stmt = 9
    RULE_assign_op = 10
    RULE_expr_stmt = 11
    RULE_print_stmt = 12
    RULE_import_stmt = 13
    RULE_return_stmt = 14
    RULE_param_list = 15
    RULE_expr = 16
    RULE_dotted_name = 17
    RULE_function_call = 18
    RULE_arith_expr = 19
    RULE_bool_expr = 20
    RULE_logic_const = 21
    RULE_list_expr = 22
    RULE_elements = 23
    RULE_dict_expr = 24
    RULE_kv_pairs = 25
    RULE_module = 26
    RULE_alias = 27
    RULE_name = 28
    RULE_rel_op = 29
    RULE_log_op = 30

    ruleNames =  [ "program", "stmt", "simple_stmt", "compound_stmt", "func_def", 
                   "if_stmt", "while_stmt", "for_stmt", "block", "assign_stmt", 
                   "assign_op", "expr_stmt", "print_stmt", "import_stmt", 
                   "return_stmt", "param_list", "expr", "dotted_name", "function_call", 
                   "arith_expr", "bool_expr", "logic_const", "list_expr", 
                   "elements", "dict_expr", "kv_pairs", "module", "alias", 
                   "name", "rel_op", "log_op" ]

    EOF = Token.EOF
    NEWLINE=1
    INDENT=2
    DEDENT=3
    WS=4
    COMMENT=5
    DEF=6
    IF=7
    ELSE=8
    ELIF=9
    WHILE=10
    FOR=11
    IN=12
    PRINT=13
    IMPORT=14
    FROM=15
    AS=16
    RETURN=17
    PASS=18
    TRUE=19
    FALSE=20
    NONE=21
    AND=22
    OR=23
    NOT=24
    PLUS=25
    MINUS=26
    STAR=27
    SLASH=28
    PERCENT=29
    EQ=30
    EQEQ=31
    NEQ=32
    LT=33
    GT=34
    LE=35
    GE=36
    PLUSEQ=37
    MINUSEQ=38
    STAREQ=39
    SLASHEQ=40
    LPAREN=41
    RPAREN=42
    LBRACK=43
    RBRACK=44
    LBRACE=45
    RBRACE=46
    COLON=47
    COMMA=48
    DOT=49
    SEMICOLON=50
    ID=51
    NUM=52
    STRING=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonMelodyParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonMelodyParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonMelodyParser.StmtContext,i)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PythonMelodyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.stmt()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonMelodyParser.DEF) | (1 << PythonMelodyParser.IF) | (1 << PythonMelodyParser.WHILE) | (1 << PythonMelodyParser.FOR) | (1 << PythonMelodyParser.PRINT) | (1 << PythonMelodyParser.IMPORT) | (1 << PythonMelodyParser.FROM) | (1 << PythonMelodyParser.RETURN) | (1 << PythonMelodyParser.ID))) != 0)):
                    break

            self.state = 67
            self.match(PythonMelodyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = PythonMelodyParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonMelodyParser.PRINT, PythonMelodyParser.IMPORT, PythonMelodyParser.FROM, PythonMelodyParser.RETURN, PythonMelodyParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.simple_stmt()
                pass
            elif token in [PythonMelodyParser.DEF, PythonMelodyParser.IF, PythonMelodyParser.WHILE, PythonMelodyParser.FOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(PythonMelodyParser.NEWLINE, 0)

        def assign_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.Assign_stmtContext,0)


        def expr_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.Expr_stmtContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.Print_stmtContext,0)


        def import_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.Import_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)




    def simple_stmt(self):

        localctx = PythonMelodyParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 73
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.state = 74
                self.expr_stmt()
                pass

            elif la_ == 3:
                self.state = 75
                self.print_stmt()
                pass

            elif la_ == 4:
                self.state = 76
                self.import_stmt()
                pass

            elif la_ == 5:
                self.state = 77
                self.return_stmt()
                pass


            self.state = 80
            self.match(PythonMelodyParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_def(self):
            return self.getTypedRuleContext(PythonMelodyParser.Func_defContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.For_stmtContext,0)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)




    def compound_stmt(self):

        localctx = PythonMelodyParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compound_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonMelodyParser.DEF]:
                self.state = 82
                self.func_def()
                pass
            elif token in [PythonMelodyParser.IF]:
                self.state = 83
                self.if_stmt()
                pass
            elif token in [PythonMelodyParser.WHILE]:
                self.state = 84
                self.while_stmt()
                pass
            elif token in [PythonMelodyParser.FOR]:
                self.state = 85
                self.for_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonMelodyParser.DEF, 0)

        def ID(self):
            return self.getToken(PythonMelodyParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PythonMelodyParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonMelodyParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(PythonMelodyParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(PythonMelodyParser.BlockContext,0)


        def param_list(self):
            return self.getTypedRuleContext(PythonMelodyParser.Param_listContext,0)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_func_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def" ):
                listener.enterFunc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def" ):
                listener.exitFunc_def(self)




    def func_def(self):

        localctx = PythonMelodyParser.Func_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(PythonMelodyParser.DEF)
            self.state = 89
            self.match(PythonMelodyParser.ID)
            self.state = 90
            self.match(PythonMelodyParser.LPAREN)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PythonMelodyParser.ID:
                self.state = 91
                self.param_list()


            self.state = 94
            self.match(PythonMelodyParser.RPAREN)
            self.state = 95
            self.match(PythonMelodyParser.COLON)
            self.state = 96
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonMelodyParser.IF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonMelodyParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonMelodyParser.ExprContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PythonMelodyParser.COLON)
            else:
                return self.getToken(PythonMelodyParser.COLON, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonMelodyParser.BlockContext)
            else:
                return self.getTypedRuleContext(PythonMelodyParser.BlockContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(PythonMelodyParser.ELIF)
            else:
                return self.getToken(PythonMelodyParser.ELIF, i)

        def ELSE(self):
            return self.getToken(PythonMelodyParser.ELSE, 0)

        def getRuleIndex(self):
            return PythonMelodyParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)




    def if_stmt(self):

        localctx = PythonMelodyParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(PythonMelodyParser.IF)
            self.state = 99
            self.expr()
            self.state = 100
            self.match(PythonMelodyParser.COLON)
            self.state = 101
            self.block()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PythonMelodyParser.ELIF:
                self.state = 102
                self.match(PythonMelodyParser.ELIF)
                self.state = 103
                self.expr()
                self.state = 104
                self.match(PythonMelodyParser.COLON)
                self.state = 105
                self.block()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PythonMelodyParser.ELSE:
                self.state = 112
                self.match(PythonMelodyParser.ELSE)
                self.state = 113
                self.match(PythonMelodyParser.COLON)
                self.state = 114
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PythonMelodyParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonMelodyParser.ExprContext,0)


        def COLON(self):
            return self.getToken(PythonMelodyParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(PythonMelodyParser.BlockContext,0)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)




    def while_stmt(self):

        localctx = PythonMelodyParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(PythonMelodyParser.WHILE)
            self.state = 118
            self.expr()
            self.state = 119
            self.match(PythonMelodyParser.COLON)
            self.state = 120
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PythonMelodyParser.FOR, 0)

        def ID(self):
            return self.getToken(PythonMelodyParser.ID, 0)

        def IN(self):
            return self.getToken(PythonMelodyParser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonMelodyParser.ExprContext,0)


        def COLON(self):
            return self.getToken(PythonMelodyParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(PythonMelodyParser.BlockContext,0)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_for_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_stmt" ):
                listener.enterFor_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_stmt" ):
                listener.exitFor_stmt(self)




    def for_stmt(self):

        localctx = PythonMelodyParser.For_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_for_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(PythonMelodyParser.FOR)
            self.state = 123
            self.match(PythonMelodyParser.ID)
            self.state = 124
            self.match(PythonMelodyParser.IN)
            self.state = 125
            self.expr()
            self.state = 126
            self.match(PythonMelodyParser.COLON)
            self.state = 127
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(PythonMelodyParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(PythonMelodyParser.DEDENT, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonMelodyParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonMelodyParser.StmtContext,i)


        def simple_stmt(self):
            return self.getTypedRuleContext(PythonMelodyParser.Simple_stmtContext,0)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = PythonMelodyParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonMelodyParser.INDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(PythonMelodyParser.INDENT)
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 130
                    self.stmt()
                    self.state = 133 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonMelodyParser.DEF) | (1 << PythonMelodyParser.IF) | (1 << PythonMelodyParser.WHILE) | (1 << PythonMelodyParser.FOR) | (1 << PythonMelodyParser.PRINT) | (1 << PythonMelodyParser.IMPORT) | (1 << PythonMelodyParser.FROM) | (1 << PythonMelodyParser.RETURN) | (1 << PythonMelodyParser.ID))) != 0)):
                        break

                self.state = 135
                self.match(PythonMelodyParser.DEDENT)
                pass
            elif token in [PythonMelodyParser.PRINT, PythonMelodyParser.IMPORT, PythonMelodyParser.FROM, PythonMelodyParser.RETURN, PythonMelodyParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.simple_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonMelodyParser.ID, 0)

        def assign_op(self):
            return self.getTypedRuleContext(PythonMelodyParser.Assign_opContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonMelodyParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)




    def assign_stmt(self):

        localctx = PythonMelodyParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(PythonMelodyParser.ID)
            self.state = 141
            self.assign_op()
            self.state = 142
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(PythonMelodyParser.EQ, 0)

        def PLUSEQ(self):
            return self.getToken(PythonMelodyParser.PLUSEQ, 0)

        def MINUSEQ(self):
            return self.getToken(PythonMelodyParser.MINUSEQ, 0)

        def STAREQ(self):
            return self.getToken(PythonMelodyParser.STAREQ, 0)

        def SLASHEQ(self):
            return self.getToken(PythonMelodyParser.SLASHEQ, 0)

        def getRuleIndex(self):
            return PythonMelodyParser.RULE_assign_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_op" ):
                listener.enterAssign_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_op" ):
                listener.exitAssign_op(self)




    def assign_op(self):

        localctx = PythonMelodyParser.Assign_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonMelodyParser.EQ) | (1 << PythonMelodyParser.PLUSEQ) | (1 << PythonMelodyParser.MINUSEQ) | (1 << PythonMelodyParser.STAREQ) | (1 << PythonMelodyParser.SLASHEQ))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_call(self):
            return self.getTypedRuleContext(PythonMelodyParser.Function_callContext,0)


        def getRuleIndex(self):
            return PythonMelodyParser.RULE_expr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_stmt" ):
                listener.enterExpr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_stmt" ):
                listener.exitExpr_stmt(self)




    def expr_stmt(self):

        localctx = PythonMelodyParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.function_call()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PythonMelodyParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(PythonMelodyParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonMelodyParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonMelodyParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(PythonMelodyParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonMelodyParser.COMMA)
            else:
                return self.getToken(PythonMelodyParser.COMMA, i)

        def getRuleIndex(self):
            return PythonMelodyParser.RULE_print_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_stmt" ):
                listener.enterPrint_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_stmt" ):
                listener.exitPrint_stmt(self)




    def print_stmt(self):

        localctx = PythonMelodyParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_print_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(PythonMelodyParser.PRINT)
            self.state = 149
            self.match(PythonMelodyParser.LPAREN)
            self.state = 150
